--- a/client/src/scss/pages/_work.scss
+++ b/client/src/scss/pages/_work.scss
@@ -146,6 +146,7 @@
         border-radius: 100px;
         overflow: hidden;
         transition-duration: 0.2s;
+        backface-visibility: hidden;
         cursor: pointer;
 
         @media(max-width: 93.75em) {
@@ -178,24 +179,18 @@
             @media(max-width: 93.75em) {
                 font-size: 1.5rem;
             }
+            @media(max-width: $phone) {
+                font-size: 1.25rem;
+            }
         }
         
-        &__image-container {
-            position: relative;
+        &__video-thumbnail {
+            position: absolute;
             height: 85%;
             width: 85%;
             border: 1px dotted $color-cyan;
-            border-radius: 100px;
-            overflow: hidden;
-            background-color: rgba(0,0,0,0.9);
-            z-index: 10;
-        }
-
-        &__video-thumbnail {
-            @include pos-absolute-center;
-            height: 200%;
-            width: 200%;
-            border-radius: 100px;
+            border-radius: inherit;
+            object-fit: cover;
         }
 
         &:hover {
@@ -204,7 +199,7 @@
             border: 1px dotted $monokai-purple;
         }
         
-        &:hover > div {
+        &:hover > video {
             border-color: $monokai-purple;
             border: 1px solid $monokai-purple;
         }
@@ -219,7 +214,7 @@
             border: 1px dotted $color-electric-green;
         }
         
-        &__selected div {
+        &__selected video {
             border: 1px solid $color-electric-green;
         }
     }
